--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,3 +3,11 @@ nav:
   - Home: index.md
   - About: about.md
 theme: readthedocs
+
+markdown_extensions:
+  - pymdownx.arithmatex:
+      generic: true
+
+extra_javascript:
+  - javascripts/mathjax.js
+  - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
