--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,7 +7,13 @@ nav:
   - API Documentation:
       - Entry Points and Handlers: api/entry.md
 
-theme: readthedocs
+theme:
+  name: material
+  locale: en
+
+#  color_mode: auto
+#  user_color_mode_toggle: true
+#  highlightjs: true
 
 markdown_extensions:
   - pymdownx.arithmatex:
